<resources>
    <string name="app_name">Calculadora</string>
    <string name="txt_titulo">Aplicación Calculadora</string>
    <string name="btn_suma">+</string>
    <string name="btn_resta">-</string>
    <string name="btn_multiplicar">*</string>
    <string name="btn_dividir">÷</string>
    <string name="btn_resultado">=</string>
    <string name="txt_linea">________________________________________________</string>
    <string name="string_usuario">admin</string>
    <string name="string_password">1234</string>
    <string name="string_msg_user">Ingrese usuario</string>
    <string name="string_msg_pass">Ingrese password</string>
    <string name="string_msg_datos">Ingrese datos de acceso</string>

    <string name="string_vacio"> </string>

    <string name="string_cero">0</string>
    <string name="string_uno">1</string>
    <string name="string_dos">2</string>
    <string name="string_tres">3</string>
    <string name="string_cuatro">4</string>
    <string name="string_cinco">5</string>
    <string name="string_seis">6</string>
    <string name="string_siete">7</string>
    <string name="string_ocho">8</string>
    <string name="string_nueve">9</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="txt_codigo">Código Nota</string>
    <string name="txt_descripcion">Descripción nota</string>
    <string name="txt_nota">Nota</string>
    <string name="BotonRegistrar">Registrar Nota</string>
    <string name="BotonBuscar">Buscar Nota</string>
    <string name="BotonEliminar">Eliminar Nota</string>
    <string name="BotonModificar">Modificar Nota</string>
    <string name="BotonJson">Leer Json</string>
</resources>
