<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtEtiqueta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/txt_titulo"
        android:textColorLink="#B51B1B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/txtEtiqueta1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEtiqueta1">

        <EditText
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtLinea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_linea" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="1" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="2" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="3" />

                <Button
                    android:id="@+id/btnDivision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="dividir"
                    android:text="@string/btn_dividir" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="4" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="5" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="6" />

                <Button
                    android:id="@+id/btnMultiplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="multiplicar"
                    android:text="@string/btn_multiplicar" />
            </TableRow>

            <TableRow
                android:layout_width="384dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="7" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="8" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="9" />

                <Button
                    android:id="@+id/btnResta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="restar"
                    android:text="@string/btn_resta"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="389dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="mostrarNumero"
                    android:text="0" />

                <Button
                    android:id="@+id/btnDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="prueba"
                    android:text="." />

                <Button
                    android:id="@+id/btnResultado"
                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:onClick="calcularSuma"
                    android:text="@string/btn_resultado" />

                <Button
                    android:id="@+id/btnMas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sumar"
                    android:text="@string/btn_suma" />

            </TableRow>
        </TableLayout>

        <EditText
            android:id="@+id/numero1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/numero2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>